2nd db in the making ish

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -1,2 +1,36 @@
-<h1>This is a restricted area, only for members</h1>
+<h1>Crap Kebab App</h1>
+
+<nav>
+    <ol>
+        <li>My Reviews</li>
+        <li>Messages</li>
+        <li>Log Out</li>
+    </ol>
+</nav>
+
+<div>
+    <h2>MAP HERE</h2>
+</div>
+
+<div>
+    <form action="/profile" method="post">
+    <label for="title">Title: </label>
+    <input type="text" name="title" id="reviewTitle"><br>
+
+    <textarea id="reviewBody" name="body" rows="4" cols="50">
+    I almost puked at the first bite because: 
+    </textarea><br>
+
+    <button type="submit">Log in</button>
+</form>
+</div>
+
+<nav>
+    <ol>
+        <li>Map</li>
+        <li>Reviews</li>
+        <li>Profile</li>
+    </ol>
+</nav>
+
 <a href="/logout">Logout</a> 
