--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -12,17 +12,6 @@
     <h2>MAP HERE</h2>
 </div>
 
-<div>
-    <form action="/profile" method="post">
-    <label for="title">Title: </label>
-    <input type="text" name="title" id="reviewTitle"><br>
-
-    <textarea id="reviewBody" name="body" rows="4" cols="50">
-    I almost puked at the first bite because: 
-    </textarea><br>
-
-    <button type="submit">Log in</button>
-</form>
 </div>
 
 <nav>
@@ -32,5 +21,5 @@
         <li>Profile</li>
     </ol>
 </nav>
-
+<a href="/newKebab">Kebab page</a>
 <a href="/logout">Logout</a> 
