--- a/views/newKebab/edit.hbs
+++ b/views/newKebab/edit.hbs
@@ -1,5 +1,5 @@
 
-<form action="/newKebab/{{_id}}/edit" method="post">
+<form action="/newKebab/edit" method="post">
 
     <h3>Restaurant</h3>
     <label for="shopName">Shop name: </label>
@@ -28,9 +28,9 @@
     <textarea id="reviewBody" name="body" rows="4" cols="50">I almost puked at the first bite because: </textarea>
     <br>
 
-    <button type="submit">Add a new kebab shop</button>
+    <button type="submit">Add modifications</button>
 
 </form>
 
-<a href="/newKebab/show">Back to kebab page</a><br>
+<a href="/newKebab/index">Back to kebab page</a><br>
 <a href="/profile">Back to main page</a>
