--- a/views/newKebab/new.hbs
+++ b/views/newKebab/new.hbs
@@ -32,5 +32,5 @@
 
 </form>
 
-<a href="/newKebab/show">Back to kebab page</a><br>
+<a href="/newKebab/index">Back to kebab page</a><br>
 <a href="/profile">Back to main page</a>
