--- a/views/newKebab/edit.hbs
+++ b/views/newKebab/edit.hbs
@@ -1,6 +1,5 @@
 
-<form action="/newKebab/edit" method="post">
-
+<form action="/newKebab/edit/{{kebabs._id}}" method="post">
     <h3>Restaurant</h3>
     <label for="shopName">Shop name: </label>
     <input type="text" name="shopName" id="shopName">
