--- a/views/newKebab/edit.hbs
+++ b/views/newKebab/edit.hbs
@@ -2,25 +2,25 @@
 <form action="/newKebab/edit/{{kebabs._id}}" method="post">
     <h3>Restaurant</h3>
     <label for="shopName">Shop name: </label>
-    <input type="text" name="shopName" id="shopName">
+    <input type="text" name="shopName" id="shopName" value="{{kebabs.shopName}}">
     <br>
     <label for="picture">Picture: </label> 
-    <input type="text" name="picture" id="picture">
+    <input type="text" name="picture" id="picture" value="{{kebabs.picture}}">
     <br>
 
     <h3>Address</h3>
     <label for="address">Address: </label>
-    <input type="text" name="address" id="address">
+    <input type="text" name="address" id="address" value="{{kebabs.address}}">
     <br>
 
     <h3>Geolocalation</h3>
     <label for="coord">Coordinates: </label>
-    <input type="number" name="coord" id="coord">
+    <input type="number" name="coord" id="coord" value="{{kebabs.coord}}">
     <br>
 
     <h3>Review</h3>
     <label for="review">Review: </label>
-    <input type="number" name="review" id="review">
+    <input type="number" name="review" id="review" value="{{kebabs.review}}">
     <br>
     <label for="title">Title: </label>
     <input type="text" name="title" id="reviewTitle"><br>
