--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -8,9 +8,9 @@
     </ol>
 </nav>
 
-<div>
-    <h2>MAP HERE</h2>
-</div>
+{{!--------------------- this is where the map will live  -------------------------}}
+<div id='map' style='width: 1200px; height: 700px;'></div>
+
 
 </div>
 
