--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,13 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{title}}</title>
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css' rel='stylesheet' />
+
   </head>
 
   <body>
 
+{{!----------- connect map.js with the map/ above is the scr link to mapbox and styles  -----------------}}
     {{{body}}}
-
     <script src="/javascripts/script.js"></script>
+    <script src="/javascripts/map.js"></script>
   </body>
 
 </html>
