--- a/views/newKebab/index.hbs
+++ b/views/newKebab/index.hbs
@@ -1,13 +1,18 @@
 <h1>Kebab shop page</h1>
 {{#each kebab}}
-    <h3></h3><a href="/newKebab/{{_id}}">{{shopName}}</a></h3>
+    <h3><a href="/newKebab/{{_id}}">{{shopName}}</a></h3>
 
 <h4>
-    {{picture}}<br>
+    <img src="{{picture}}" alt="Kebab image"><br>
     {{review}}<br>
     {{address}}<br>
     {{coord}}<br>
-    {{comments}}<br>
+    {{#each comments}}
+    {{title}}<br>
+    {{body}}<br>
+    {{date}}<br>
+    {{/each}}
+    
 </h4>
 
 <form action="/newKebab/{{_id}}/delete" method="POST">
@@ -17,7 +22,11 @@
 <form runat="server" action="/newKebab/edit/{{_id}}" method="GET">
     <button type="submit">Edit</button>
 </form>
+<br>
+<br>
 {{/each}}
 
 <a href="/newKebab/new">Add a kebab shop</a><br>
 <a href="/profile">Back to main page</a>
+
+
