--- a/views/newKebab/new.hbs
+++ b/views/newKebab/new.hbs
@@ -1,5 +1,5 @@
 
-<form action="/newKebab/new" method="post">
+<form class="new-form" action="/newKebab/new" method="post">
 
     <h3>Restaurant</h3>
     <label for="shopName">Shop name: </label>
@@ -32,5 +32,10 @@
 
 </form>
 
-<a href="/newKebab/index">Back to kebab page</a><br>
+{{!--------------------- this is where the map will live  -------------------------}}
+<div id='map' style='width: 100%; height: 500px;'></div>
+
+<a href="/newKebab/index">Back to döner index</a><br>
 <a href="/profile">Back to main page</a>
+
+<script src="/javascripts/map.js"></script>
