morning merge/new map

--- a/views/newKebab/new.hbs
+++ b/views/newKebab/new.hbs
@@ -33,9 +33,9 @@
 </form>
 
 {{!--------------------- this is where the map will live  -------------------------}}
-<div id='map' style='width: 100%; height: 500px;'></div>
+{{!-- <div id='map' style='width: 100%; height: 500px;'></div> --}}
 
 <a href="/newKebab/index">Back to döner index</a><br>
 <a href="/profile">Back to main page</a>
 
-<script src="/javascripts/map.js"></script>
+{{!-- <script src="/javascripts/map.js"></script> --}}
