--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -8,8 +8,8 @@
 
 <a href="/newKebab/new" class="btn btn-light my-3 d-flex justify-content-center">Add an Imbiss</a>
 {{!--------------------- this is where the map will live  -------------------------}}
-<div id='map' style='width: 100%; height: 500px;'>
-</div>
+{{!-- <div id='map' style='width: 100%; height: 500px;'>
+</div> --}}
 
 </div>
 
