--- a/views/newKebab/index.hbs
+++ b/views/newKebab/index.hbs
@@ -1,6 +1,6 @@
 <h1>Kebab shop page</h1>
 {{#each kebab}}
-    <h3><a href="/newKebab/{{_id}}">{{shopName}}</a></h3>
+<h3><a href="/newKebab/{{_id}}">{{shopName}}</a></h3>
 
 <h4>
     <img src="{{picture}}" alt="Kebab image"><br>
@@ -12,8 +12,10 @@
     {{body}}<br>
     {{date}}<br>
     {{/each}}
-    
+    <input value="{{address}}">
 </h4>
+
+<div id="map" style='width: 500px; height: 500px;'></div>
 
 <form action="/newKebab/{{_id}}/delete" method="POST">
     <button type="submit">Delete</button>
@@ -29,4 +31,9 @@
 <a href="/newKebab/new">Add a kebab shop</a><br>
 <a href="/profile">Back to main page</a>
 
-
+<script>
+    let addresses = []
+    document.querySelectorAll("input").forEach(elem => {
+        addresses.push(elem.value)
+    })
+</script>
