--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -8,9 +8,11 @@
   <title>{{title}}</title>
   <link rel="stylesheet" href="/stylesheets/style.css" />
   {{!--------------------------------- font awesome  ---------------------------------------------------}}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/brands.min.css"
+  {{!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/brands.min.css"
     integrity="sha512-y9WAYyOsrjBVQ5Y+mQO/2zNrWS1unmDoJlaGGdHaqPVHJGBMCCn/7M/D27FCR/u2HRBwv6IIqrE0qHaWGWNFCQ=="
-    crossorigin="anonymous" />
+    crossorigin="anonymous" /> --}}
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Teko:wght@500&display=swap" rel="stylesheet">
+
   {{!--------------------------------- bootstrap  ---------------------------------------------------}}
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
