--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,24 @@
 body {
-  padding: 50px;
-  font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
+  /* padding: 50px; */
+  /* font: 10px "Lucida Grande", Helvetica, Arial, sans-serif; */
 }
 
 a {
-  color: #00B7FF;
+  font-family: 'Open Sans', sans-serif;
 }
 
+li {
+  font-family: 'Open Sans', sans-serif;
+}
+
+label {
+  font-family: 'Open Sans', sans-serif;
+}
+
+button {
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1 {
+  font-family: 'Teko', sans-serif;
+}
