--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,12 @@
 
-<h1>{{title}}</h1>
-<p>Welcome {{#if user}}{{user.username}}{{/if}}</p>
-
-{{#unless user}}
-<a href="/signup">Signup</a>
-<a href="/login">Login</a>
-{{else}}
-<a href="/private">Private</a>
-<a href="/logout">Logout</a>
-{{/unless}}
+{{!-- <h1>{{title}}</h1> --}}
+<h1 class="display-4 text-center">Welcome {{#if user}}{{user.username}}{{/if}}</h1>
+<div class="container">
+    {{#unless user}}
+    <a class="d-flex justify-content-left" href="/signup">Signup</a>
+    <a class="d-flex justify-content-left" href="/login">Login</a>
+    {{else}}
+    <a class="d-flex justify-content-left" href="/private">Private</a>
+    <a class="d-flex justify-content-left"href="/logout">Logout</a>
+    {{/unless}}
+</div>
