--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -11,11 +11,14 @@
 {{!-- <div id='map' style='width: 100%; height: 500px;'>
 </div> --}}
 
-<div id="map" style='width: 500px; height: 500px;'></div>
+<div id="map" style='width: 100%; height: 500px;'></div>
 
 
-<a href="/newKebab">Kebab page</a> 
-<a href="/logout">Logout</a> 
+<div class="container">
+    <a class="justify-content-around" href="/newKebab">Kebab page</a> 
+    <a class="justify-content-around" href="/logout">Logout</a>     
+</div>
+
 
 <nav>
     <ol class="d-flex justify-content-around">
