buggy as fuck fuckery

--- a/views/newKebab/show.hbs
+++ b/views/newKebab/show.hbs
@@ -13,5 +13,7 @@
     {{/each}}
 </h4>
 
+<div id="map" style = 'width: 500px; height: 500px;' ></div>
+
 <a href="/newKebab/index">Back to kebab page</a><br>
 <a href="/profile">Back to main page</a>
