--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,7 +4,7 @@
     <label for="password">Password: </label>
     <input type="password" name="password" id="password">
 
-    <button type="submit">Log in</button>
+    <button class="button" type="submit">Log in</button>
 </form>
 {{#if message}}
     <p style="color: red">{{message}}</p>
