--- a/views/newKebab/show.hbs
+++ b/views/newKebab/show.hbs
@@ -2,7 +2,7 @@
 
 <h4>
     {{ kebabmodel.shopName }}<br>
-    <img src="{{ kebabmodel.picture }}" alt="Kebab image"><br>
+    <img src="https://res.cloudinary.com/dpqkayvki/image/upload/v1594124127/Krapp/8_owjrmn.jpg" alt="Kebab image"><br>
     {{ kebabmodel.review }}<br>
     {{ kebabmodel.address }}<br>
     {{ kebabmodel.coord }}<br>
