--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,22 +3,114 @@
   font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
 } */
 
+/* $keycolor:#03384b; */
+
 a {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Teko', sans-serif;
+  color: black;
 }
 
 li {
   font-family: 'Open Sans', sans-serif;
 }
 
-label {
+/* label {
   font-family: 'Open Sans', sans-serif;
-}
-
-button {
-  font-family: 'Open Sans', sans-serif;
-}
+} */
 
 h1 {
   font-family: 'Teko', sans-serif;
+}
+
+.big{
+  font-size: 6em;
+}
+
+span {
+  display: flex;
+  align-content: space-around;
+}
+
+/* .button {
+  border-radius: 100em;
+  text-align: center;
+  position: relative;
+  padding: .2em .5em;
+  color: black;
+  border: 1.7px solid black;
+  display: inline-block;
+} */
+
+.button {
+  border-radius: 100em;
+  text-align: center;
+  position: relative;
+  padding: .5em 1em;
+  font-family: 'Teko', sans-serif; 
+  color: black;
+  border: 1.7px solid black;
+  display: inline-block;
+}
+
+input {
+  border-radius: 100em;
+  text-align: center;
+  position: relative;
+  padding: .5em 1em;
+  font-family: 'Teko', sans-serif; 
+  color: black;
+  border: 1.7px solid black;
+  display: inline-block;
+}
+
+label {
+  font-family: 'Teko', sans-serif; 
+  font-size: 2em;
+}
+
+.reviews {
+  width: 500px;
+  align-items: center;
+  flex-direction: column;
+}
+
+.flexbutton {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+  margin-top: 1.5em;
+}
+
+/* .Nsection {
+  margin-bottom: 50px;
+} */
+
+.new-form {
+  width: 700px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  align-content: center;
+}
+
+.NForm {
+  margin-bottom: 50px;
+  /* display: flex;
+  flex-direction: ;
+  align-items: flex-end;
+  justify-content: end; */
+}
+
+textarea {
+  border-radius: 1em;
+  position: relative;
+  padding: 1em 1em;
+  color: black;
+  border: 1.7px solid black;
+  display: inline-block;
 }
