--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -91,7 +91,7 @@ label {
 .new-form {
   width: 700px;
   display: flex;
-  flex-direction: column;
+  flex-direction: columngi;
   flex-wrap: nowrap;
   justify-content: space-evenly;
   align-items: center;
