--- a/views/newKebab/index.hbs
+++ b/views/newKebab/index.hbs
@@ -1,16 +1,15 @@
 
-<h1 class="big">Kebab shop page</h1>
-<a class="button" href="/newKebab/new">Add a kebab shop</a><br>
-<a class="button" href="/profile">Back to main page</a>
+<nav class="nav">
+    <img style="height: 100px;" src="https://res.cloudinary.com/dpqkayvki/image/upload/v1594220042/Krapp/icon-04_hlgowi.svg" alt="navicon">
+    <h1 style="object-fit: contain;" class="big">KRAPP LOCATIONS{{#if user}}{{user.username}}{{/if}}</h1>
+    <div class="nav-links">
+        <a class="button" href="/newKebab/new">Add</a><br>
+        <a class="button" href="/profile">Main</a>
+    </div>
+</nav>
 
-<h1>Kebab shop page</h1>
-
-
-
+<div class="centerme">
 {{#each kebab}}
-
-<h3><a href="/newKebab/{{_id}}">{{shopName}}</a></h3>
-
 <div class="reviews">
     <h3><a href="/newKebab/{{_id}}">{{shopName}}</a></h3>
     <img style='width: 300px;' src="{{picture}}" alt="Kebab image"><br>
@@ -24,18 +23,15 @@
     {{/each}}
     <input value="{{address}}">
 </div>
-
 <div id="map" style='width: 100%; height: 300px;'></div>
-
 <form action="/newKebab/{{_id}}/delete" method="POST">
     <button class="button" type="submit">Delete</button>
 </form>
 <form runat="server" action="/newKebab/edit/{{_id}}" method="GET">
     <button class="button" type="submit">Edit</button>
 </form>
-
 {{/each}}
-
+</div>
 
 
 <script>
@@ -45,8 +41,6 @@
     })
 </script>
 
-<br>
 
 
-<a href="/newKebab/new">Add a kebab shop</a><br>
-<a href="/profile">Back to main page</a>
+
