--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,11 +1,24 @@
-<form action="/signup" method="post">
-    <label for="username">Username: </label>
-    <input type="text" name="username" id="username">
-    <label for="password">Password: </label>
-    <input type="password" name="password" id="password">
+<nav class="nav">
+    <img style="height: 100px;" src="https://res.cloudinary.com/dpqkayvki/image/upload/v1594220042/Krapp/icon-04_hlgowi.svg" alt="navicon">
+    <h1 class="big-left">KRAPP {{#if user}}{{user.username}}{{/if}}</h1>
+</nav>
 
-    <button type="submit">Sign up</button>
-</form>
+<span style="margin-top: 200px;" class="centerme">
+    <form class="new-form" action="/signup" method="post">
+    <div class="NForm">
+        <label for="username">Username: </label>
+        <input type="text" name="username" id="username">
+    </div>
+    <div class="NForm">
+        <label for="password">Password: </label>
+        <input type="password" name="password" id="password">
+    </div>
+    <div class="NForm">
+        <button class="button" type="submit">Sign up</button>
+    </div>
+    </form>
+</span>
+
 {{#if message}}
     <p style="color: red">{{message}}</p>
 {{/if}}
