--- a/views/newKebab/new.hbs
+++ b/views/newKebab/new.hbs
@@ -1,59 +1,47 @@
+<a class="button" href="/newKebab/index">Back to döner index</a><br>
+<a class="button" href="/profile">Back to main page</a>
 
-<form class="new-form" action="/newKebab/new" method="post">
+<span class="centerme">
+    <form class="new-form" action="/newKebab/new" method="post">
 
-<div class="NSection">
-    <h3>Restaurant</h3>
     <div class="NForm">
-        <label for="shopName">Shop name</label>
+        <label for="shopName">Shop name    </label>
         <input type="text" name="shopName" id="shopName">
-        <br>
-        <label for="picture">Picture</label> 
+    </div>
+    <div class="NForm">
+        <label for="picture">Picture    </label> 
         <input type="text" name="picture" id="picture">
-        <br>
     </div>
-</div>
-
-    
-<div class="NSection">
-    <h3>Address</h3>
     <div class="NForm">
-        <label for="address">Address</label>
+        <label for="address">Address   </label>
         <input type="text" name="address" id="address">
-    <br>
     </div>
-</div>
-    
- 
-<div class="NSection">
-    <h3>Geolocalation</h3>
     <div class="NForm">
-        <label for="coord">Coordinates</label>
+        <label for="coord">Coordinates    </label>
         <input type="number" name="coord" id="coord">   
     </div>
-</div>
-    
-
-<div class="NSection">
-    <h3>Review</h3>
     <div class="NForm">
-        <label for="review">Review</label>
+        <label for="review">Review   </label>
         <input type="number" name="review" id="review">
-        <br>
-        <label for="title">Title</label>
-        <input type="text" name="title" id="reviewTitle"><br>
-        <textarea id="reviewBody" name="body" rows="4" cols="50">I almost puked at the first bite because: </textarea>
-        <br>
     </div>
-</div>
+    <div class="NForm">
+        <label for="title">Title   </label>
+        <input type="text" name="title" id="reviewTitle">
+    </div>
+    <div class="NForm">
+        <textarea id="reviewBody" name="body" rows="4" cols="50">I almost puked at the first bite because: </textarea>
+    </div>
 
-<button class="button" type="submit">Add a new kebab shop</button>
+    <button class="button" type="submit">Add a new kebab shop</button>
+    </form>
+</span>
 
-</form>
+
+
 
 {{!--------------------- this is where the map will live  -------------------------}}
 {{!-- <div id='map' style='width: 100%; height: 500px;'></div> --}}
 
-<a class="button" href="/newKebab/index">Back to döner index</a><br>
-<a class="button" href="/profile">Back to main page</a>
+
 
 {{!-- <script src="/javascripts/map.js"></script> --}}
