--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,7 +127,7 @@ textarea {
 
 nav {
   height: 100px;
-  background-color: #FF7F00;
+  background-color: #FFEC00;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -138,6 +138,6 @@ nav {
   margin-right: 50px;
 }
 
-.signup {
+/* .signup {
   
-}
+} */
