super duper merge motherforker3

--- a/views/newKebab/new.hbs
+++ b/views/newKebab/new.hbs
@@ -1,6 +1,3 @@
-<a class="button" href="/newKebab/index">Back to döner index</a><br>
-<a class="button" href="/profile">Back to main page</a>
-
 <span class="centerme">
     <form class="new-form" action="/newKebab/new" method="post">
 
@@ -53,8 +50,7 @@
 
 
 
-<a href="/newKebab/index">Back to döner index</a><br>
-<a href="/profile">Back to main page</a>
+<a href="/newKebab/">Back to döner index</a><br>
 
 <button type="button" id="add-pin">Add Pin</button>
 
