--- a/views/newKebab/edit.hbs
+++ b/views/newKebab/edit.hbs
@@ -30,5 +30,4 @@
 
 </form>
 
-<a href="/newKebab/index">Back to kebab page</a><br>
-<a href="/profile">Back to main page</a>
+<a href="/newKebab">Main</a><br>
