--- a/views/newKebab/edit.hbs
+++ b/views/newKebab/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/newKebab/edit/{{kebabs._id}}" method="post">
+<form action="/newKebab/edit/{{kebabs._id}}" method="POST">
     <h3>Restaurant</h3>
     <label for="shopName">Shop name: </label>
     <input type="text" name="shopName" id="shopName" value="{{kebabs.shopName}}">
