--- a/views/newKebab/new.hbs
+++ b/views/newKebab/new.hbs
@@ -1,5 +1,5 @@
 <span class="centerme">
-    <form class="new-form" action="/newKebab/new" method="post">
+    <form class="new-form" action="/newKebab/new" method="POST">
 
         <div class="NForm">
             <label for="shopName">Shop name </label>
@@ -33,15 +33,17 @@
             <textarea id="reviewBody" name="body" rows="4"
                 cols="50">I almost puked at the first bite because: </textarea>
         </div>
+
+        <button class="button" type="submit">Add a new kebab shop</button>
+
     </form>
 </span>
 
 
-<form class="new-form" action="/newKebab/new" method="post">
 
 
-    <button class="button" type="submit">Add a new kebab shop</button>
 
+    
 
 {{!--------------------- this is where the map will live  -------------------------}}
 
