--- a/views/newKebab/edit.hbs
+++ b/views/newKebab/edit.hbs
@@ -1,33 +1,46 @@
-<form action="/newKebab/edit/{{kebabs._id}}" method="POST">
-    <h3>Restaurant</h3>
-    <label for="shopName">Shop name: </label>
-    <input type="text" name="shopName" id="shopName" value="{{kebabs.shopName}}">
-    <br>
-    <label for="picture">Picture: </label>
-    <input type="text" name="picture" id="picture" value="{{kebabs.picture}}">
-    <br>
+<nav class="nav">
+    <img style="height: 100px;" src="https://res.cloudinary.com/dpqkayvki/image/upload/v1594220042/Krapp/icon-04_hlgowi.svg" alt="navicon">
+    <h1 style="object-fit: contain;" class="big">KRAPP{{#if user}}{{user.username}}{{/if}}</h1>
+    <div class="nav-links">
+        <a style="margin-right: 10px;" class="button" href="/newKebab/new">Add</a><br>
+        <a style="margin-right: 5px;" class="button" href="/logout">Logout</a>
+    </div>
+</nav>
 
-    <h3>Address</h3>
-    <label for="address">Address: </label>
-    <input type="text" name="address" id="address" value="{{kebabs.address}}">
-    <br>
+<span style="margin-top: 70px;" class="centerme">
+    <form class="new-form" action="/newKebab/edit/{{kebabs._id}}" method="POST">
+        <div class="NForm">
+            <label for="shopName">Shop name: </label>
+            <input type="text" name="shopName" id="shopName" value="{{kebabs.shopName}}">
+        </div>
+        <div class="NForm">
+            <label for="picture">Picture: </label>
+            <input type="text" name="picture" id="picture" value="{{kebabs.picture}}">
+        </div>    
+        <div class="NForm">
+            <label for="address">Address: </label>
+            <input type="text" name="address" id="address" value="{{kebabs.address}}">
+        </div>    
+        <div class="NForm">
+            <label for="coord">Coordinates: </label>
+            <input type="number" name="coord" id="coord" value="{{kebabs.coord}}">
+        </div>
+        <div class="NForm">
+            <label for="review">Review: </label>
+            <input type="number" name="review" id="review" value="{{kebabs.review}}">
+        </div> 
+        <div class="NForm">
+            <label for="title">Title: </label>
+            <input type="text" name="title" id="reviewTitle"><br>
+        </div>
+        <div class="NForm">
+            <textarea id="reviewBody" name="body" rows="4" cols="50">I almost puked at the first bite because: </textarea>
+        </div>   
+        <div class="NForm">
+            <button class="button" type="submit">Add modifications</button>
+        </div>
+    </form>
+</span>
 
-    <h3>Geolocalation</h3>
-    <label for="coord">Coordinates: </label>
-    <input type="number" name="coord" id="coord" value="{{kebabs.coord}}">
-    <br>
 
-    <h3>Review</h3>
-    <label for="review">Review: </label>
-    <input type="number" name="review" id="review" value="{{kebabs.review}}">
-    <br>
-    <label for="title">Title: </label>
-    <input type="text" name="title" id="reviewTitle"><br>
-    <textarea id="reviewBody" name="body" rows="4" cols="50">I almost puked at the first bite because: </textarea>
-    <br>
 
-    <button type="submit">Add modifications</button>
-
-</form>
-
-<a href="/newKebab">Main</a><br>
