--- a/views/newKebab/show.hbs
+++ b/views/newKebab/show.hbs
@@ -1,17 +1,27 @@
-<h1>kebabmodel shop details</h1>
+<nav class="nav">
+    <img style="height: 100px;" src="https://res.cloudinary.com/dpqkayvki/image/upload/v1594220042/Krapp/icon-04_hlgowi.svg" alt="navicon">
+    <h1 style="object-fit: contain;" class="big">KRAPP{{#if user}}{{user.username}}{{/if}}</h1>
+    <div class="nav-links">
+        <a style="margin-right: 10px;" class="button" href="/newKebab/new">Add</a><br>
+        <a style="margin-right: 5px;" class="button" href="/logout">Logout</a>
 
-<h4>
-    {{ kebabmodel.shopName }}<br>
-    <img src="https://res.cloudinary.com/dpqkayvki/image/upload/v1594124127/Krapp/8_owjrmn.jpg" alt="Kebab image"><br>
-    {{ kebabmodel.review }}<br>
-    {{ kebabmodel.address }}<br>
-    {{ kebabmodel.coord }}<br>
-    {{#each kebabmodel.comments}}
-    {{title}}<br>
-    {{body}}<br>
-    {{date}}<br>
-    {{/each}}
+    </div>
+</nav>
 
-</h4>
+<div class="centerme">
+    <div class="reviews">
+        <img style="width: 400px;" src="{{kebabmodel.picture}}" alt="Kebab image">
+        <h1 class="big">{{ kebabmodel.shopName }}</h1>
+        {{ kebabmodel.review }} ⭐
+        {{date}}<br>
+        {{ kebabmodel.address }}<br>
+        {{ kebabmodel.coord }}<br>
+        {{#each kebabmodel.comments}}
+        {{title}}<br>
+        {{body}}<br>
+        
+        {{/each}}
+    </div>
+    <a style="margin-top: 30px" class="button" href="/newKebab">Back to kebab page</a><br>
+</div>
 
-<a href="/newKebab">Back to kebab page</a><br>
