--- a/views/newKebab/index.hbs
+++ b/views/newKebab/index.hbs
@@ -39,7 +39,7 @@
     {{/each}}
 
 </div>
-    <div style="margin-top: 20px; margin-right: 650px;" class="buttons">
+    <div style="margin-top: 20px;" class="buttons">
     <form action="/newKebab/{{_id}}/delete" method="POST">
         <button class="button" type="submit">Delete</button>
     </form>
