--- a/views/newKebab/new.hbs
+++ b/views/newKebab/new.hbs
@@ -1,5 +1,5 @@
 <nav class="nav">
-    <img style="height: 100px;" src="https://res.cloudinary.com/dpqkayvki/image/upload/v1594220042/Krapp/icon-04_hlgowi.svg" alt="navicon">
+    <a href="/newKebab"><img style="height: 100px;" src="https://res.cloudinary.com/dpqkayvki/image/upload/v1594220042/Krapp/icon-04_hlgowi.svg" alt="navicon"></a>
     <h1 style="object-fit: contain;" class="big">KRAPP{{#if user}}{{user.username}}{{/if}}</h1>
     <div class="nav-links">
         <a style="margin-right: 10px;" class="button" href="/newKebab/new">Add</a><br>
