--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -138,6 +138,11 @@ nav {
   margin-right: 50px;
 }
 
-/* .signup {
-  
-} */
+.toblur {
+  -webkit-filter: blur(5px); /* Safari 6.0 - 9.0 */
+  filter: blur(5px);
+}
+.toblur:hover {
+  -webkit-filter: blur(0px); /* Chrome, Safari, Opera */
+  filter: blur(0px);
+}
