--- a/views/newKebab/index.hbs
+++ b/views/newKebab/index.hbs
@@ -28,7 +28,7 @@
 <div class="centerme">
 <div class="reviews">
     <a style="color: black;" class="big" href="/newKebab/{{_id}}">{{shopName}}</a>
-    <img class="blur" style='filter: blur(4px);' src="{{picture}}" alt="Kebab image"> 
+    <img class="blur" style="width: 400px;" src="{{picture}}" alt="Kebab image"> 
     {{review}} ⭐
     {{date}}<br>
     {{address}}
