--- a/views/newKebab/show.hbs
+++ b/views/newKebab/show.hbs
@@ -1,27 +1,12 @@
 <nav class="nav">
-    <img style="height: 100px;" src="https://res.cloudinary.com/dpqkayvki/image/upload/v1594220042/Krapp/icon-04_hlgowi.svg" alt="navicon">
+    <img style="height: 100px;"
+        src="https://res.cloudinary.com/dpqkayvki/image/upload/v1594220042/Krapp/icon-04_hlgowi.svg" alt="navicon">
     <h1 style="object-fit: contain;" class="big">KRAPP{{#if user}}{{user.username}}{{/if}}</h1>
     <div class="nav-links">
         <a style="margin-right: 10px;" class="button" href="/newKebab/new">Add</a><br>
         <a style="margin-right: 5px;" class="button" href="/logout">Logout</a>
-
-<<<<<<< HEAD
-<h4>
-    {{ kebabmodel.shopName }}<br>
-    <img src="{{ kebabmodel.picture }}" alt="Kebab image"><br>
-    {{ kebabmodel.review }}<br>
-    {{ kebabmodel.address }}<br>
-    {{ kebabmodel.coord }}<br>
-    {{#each kebabmodel.comments}}
-    {{title}}<br>
-    {{body}}<br>
-    {{date}}<br>
-    {{/each}}
-=======
     </div>
 </nav>
->>>>>>> 12da7b2f11898006e8f9c43222e874abaab454c2
-
 <div class="centerme">
     <div class="reviews">
         <img style="width: 400px;" src="{{kebabmodel.picture}}" alt="Kebab image">
@@ -33,9 +18,8 @@
         {{#each kebabmodel.comments}}
         {{title}}<br>
         {{body}}<br>
-        
+
         {{/each}}
     </div>
     <a style="margin-top: 30px" class="button" href="/newKebab">Back to kebab page</a><br>
 </div>
-
